--- a/views/admin/add-role.ejs
+++ b/views/admin/add-role.ejs
@@ -1,147 +1,199 @@
 <!doctype html>
 <html lang="en">
 
-
-<%-include('include/head-css-file.ejs')-%>
-
+<%- include('include/head-css-file.ejs') -%>
 
 <body>
-	<!--wrapper-->
-	<div class="wrapper">
-		<!--sidebar wrapper -->
-		<%- include('./include/sidebar.ejs'); -%>
-		<!--end sidebar wrapper -->
-		<!--start header -->
-		<%-include('./include/header.ejs')-%>
-		<!--end header -->
-		<!--start page wrapper -->
-		<div class="page-wrapper">
-			<div class="page-content">
-				<!--breadcrumb-->
-				<div class="page-breadcrumb d-none d-sm-flex align-items-center mb-3">
-					<div class="breadcrumb-title pe-3">Home</div>
-					<div class="ps-3">
-						<nav aria-label="breadcrumb">
-							<ol class="breadcrumb mb-0 p-0">
-								<li class="breadcrumb-item"><a href="javascript:;"><i class="bx bx-home-alt"></i></a>
-								</li>
-								<li class="breadcrumb-item active" aria-current="page">Add Role</li>
-							</ol>
-						</nav>
-					</div>
-					
-				</div>
-				<!--end breadcrumb-->
-				<div class="row">
-					<div class="col-xl-12 mx-auto">
-						<div class="card">
-							
-							<div class="card-body p-4">
-								
-								<% if (successMessage && successMessage.length > 0) { %>
-		    					<div class="alert alert-success">
-		      						<%= successMessage %>
-		    					</div>
-		  						<% } %>
-                                  <div class="row">
-									 <h3 class="mb-0 text-uppercase col-xl-9">Add Role</h3>
-									 <div class="d-md-flex d-grid align-items-center gap-3 float-right col-xl-3">
-									 	
-									 	<button type="button" class="btn btn-primary radius-30 mt-0 mt-lg-0" data-bs-toggle="modal" data-bs-target="#exampleModal"><i class="bx bxs-plus-square"></i>Add New Role</button>
-									</div>
-								   </div>	
-							   
-				<hr/>
-				<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-					<div class="modal-dialog">
-												<div class="modal-content">
-													<div class="modal-header">
-														<h5 class="modal-title" id="exampleModalLabel">Add Country</h5>
-														<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-													</div>
-													<div class="modal-body">
-														<form class="row g-3 needs-validation" action='/add-role' method="post" novalidate>
-														<div class="col-md-6">
-														<label for="bsValidation1" class="form-label">Enter Role Name </label>
-														<input type="text" name='add_cat' class="form-control"  placeholder="Enter Role Name" value="" >
+  <!--wrapper-->
+  <div class="wrapper">
+    <!--sidebar wrapper -->
+    <%- include('./include/sidebar.ejs') -%>
+    <!--end sidebar wrapper -->
 
-														<p style="color: red;">
-															<%=(typeof errors!='undefined' && typeof errors.add_cat!='undefined' )? errors.add_cat.msg:''%></p>
-														
-													</div>
-									
-									
-									<div class="col-md-12">
-										<div class="d-md-flex d-grid align-items-center gap-3">
-											<button type="submit" class="btn btn-primary px-4">Add Role</button>
-											
-										</div>
-									</div>
-								</form>
-														
-													</div>
-													
-												</div>
-											</div>
-										</div>
-				<div class="card">
-					<div class="card-body">
-						<div class="table-responsive">
-							<table id="example2" class="table table-striped table-bordered">
-								<thead>
-									<tr>
-										<th>Name</th>
-										<th>Role</th>
-										<th>Delete /Edit</th>
-										
-										
-									</tr>
-								</thead>
-								<tbody>
-									<%
-									let i=1;
-                                     if(roles !=""){
-                                     if (roles && roles.length > 0) { 
-									 roles.forEach((item) => { %>
-									<tr id='trid_<%= item._id%>'>
-										<td><%= i++ %></td>
-										<td><%= item.role_name %></td>
-										<td><a data-id='<%= item._id%>' id='listrole' class='btn btn-danger'><i class='bx bx-trash'></i></a>|<a href='delete' class='btn btn-success'><i class='bx bx-edit'></i></a></td>
-										
-									</tr>
+    <!--start header -->
+    <%- include('./include/header.ejs') -%>
+    <!--end header -->
 
-									<% });} }%>
-								</tbody>
-								
-							</table>
-						</div>
-					</div>
-				</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!--end row-->
+    <!--start page wrapper -->
+    <div class="page-wrapper">
+      <div class="page-content">
+        <!--breadcrumb-->
+        <div class="page-breadcrumb d-none d-sm-flex align-items-center mb-3">
+          <div class="breadcrumb-title pe-3">Home</div>
+          <div class="ps-3">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb mb-0 p-0">
+                <li class="breadcrumb-item">
+                  <a href="javascript:;"><i class="bx bx-home-alt"></i></a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Add Role</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+        <!--end breadcrumb-->
 
-				
-				<!--end row-->
+        <div class="row">
+          <div class="col-xl-12 mx-auto">
+            <div class="card">
+              <div class="card-body p-4">
+                <% if (successMessage && successMessage.length > 0) { %>
+                <div class="alert alert-success">
+                  <%= successMessage %>
+                </div>
+                <% } %>
 
+                <div class="row">
+                  <h3 class="mb-0 text-uppercase col-xl-9">Add Role</h3>
+                  <div class="d-md-flex d-grid align-items-center gap-3 float-right col-xl-3">
+                    <button type="button" class="btn btn-primary radius-30 mt-0 mt-lg-0" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                      <i class="bx bxs-plus-square"></i> Add New Role
+                    </button>
+                  </div>
+                </div>
+                <hr />
 
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Add Country</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <form class="row g-3 needs-validation" action="/add-role" method="post" novalidate>
+                          <div class="col-md-6">
+                            <label for="bsValidation1" class="form-label">Enter Role Name</label>
+                            <input type="text" name="add_cat" class="form-control" placeholder="Enter Role Name" value="">
+                            <p style="color: red;">
+                              <%=(typeof errors != 'undefined' && typeof errors.add_cat != 'undefined') ? errors.add_cat.msg : '' %>
+                            </p>
+                          </div>
+                          <div class="col-md-12">
+                            <div class="d-md-flex d-grid align-items-center gap-3">
+                              <button type="submit" class="btn btn-primary px-4">Add Role</button>
+                            </div>
+                          </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="card">
+                  <div class="card-body">
+                    <div class="table-responsive">
+                      <table id="example2" class="table table-striped table-bordered">
+                        <thead>
+                          <tr>
+                            <th>#</th>
+                            <th>Role</th>
+                            <th>Actions</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <% let i = 1; if (roles != "") { if (roles && roles.length > 0) { roles.forEach((item) => { %>
+                          <tr id="trid_<%= item._id %>">
+                            <td><%= i++ %></td>
+                            <td><%= item.role_name %></td>
+                            <td>
+                              <div class="d-flex order-actions">
+                              
+                                <a data-id="<%= item._id %>" id="listrole" class="btn btn-danger">
+                                  <i class="bx bx-trash"></i>
+                                </a>
+                                |
+                                <a href="javascript:;" data-bs-toggle="modal" data-bs-target="#viewModal" onclick="editModal('<%= item._id %>')" data-id="<%= item._id %>" class="btn btn-success">
+                                  <i class="bx bx-edit"></i>
+                                </a>
+                              </div>
+                            </td>
+                          </tr>
+                          <% }); } } %>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--end row-->
+
+      </div>
+    </div>
+    <!--end page wrapper -->
+
+    <!--start overlay-->
+	<!--/*******************Edit Modal **********/-->
+	<div class="modal fade" id="viewModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <h5 class="modal-title" id="editModalLabel">Edit Role</h5>
+			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 			</div>
+			<form id="editForm">
+			  <div class="modal-body">
+				<div class="mb-3">
+				  <label for="edit-name" class="form-label">Role</label>
+				  <input type="text" class="form-control" id="edit-role" name="full_name">
+				</div>
+			 </div>
+			  <div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+				<button type="submit" class="btn btn-primary">Save Changes</button>
+			  </div>
+			</form>
+		  </div>
 		</div>
-		<!--end page wrapper -->
-		<!--start overlay-->
-		<div class="overlay toggle-icon"></div>
-		<!--end overlay-->
-		<!--Start Back To Top Button--> <a href="javaScript:;" class="back-to-top"><i class='bx bxs-up-arrow-alt'></i></a>
-		<!--End Back To Top Button-->
-		<footer class="page-footer">
-			<p class="mb-0">Copyright © 2023. All right reserved.</p>
-		</footer>
-	</div>
-	<!--end wrapper-->
+	  </div>
+	  
+    <div class="overlay toggle-icon"></div>
+    <!--end overlay-->
 
-	
+    <!--Start Back To Top Button-->
+    <a href="javascript:;" class="back-to-top">
+      <i class="bx bxs-up-arrow-alt"></i>
+    </a>
+    <!--End Back To Top Button-->
 
+    <footer class="page-footer">
+      <p class="mb-0">Copyright © 2023. All rights reserved.</p>
+    </footer>
+  </div>
+  <!--end wrapper-->
 
-	<%-include('include/footer.ejs')-%>
+  <%- include('include/footer.ejs') -%>
+</body>
+<script>
+async function editModal(id) {
+  
+	try {
+					const response = await fetch(`/edit-role/${id}`);
+					if (!response.ok) {
+					throw new Error('Failed to fetch item details');
+					}
+
+					const editRole = await response.json();
+					const fields = [
+					{ id: 'edit-role', value: editRole.role_name },
+					
+					];
+
+					fields.forEach(field => {
+					const inputElement = document.getElementById(field.id);
+					if (inputElement) {
+						inputElement.value = field.value ?? 'N|A'; // Set value or default to empty string
+					}
+					});
+				} catch (error) {
+					console.error(error);
+					alert('Failed to load item details for editing');
+				}
+}
+
+</script>
+
+</html>
