--- a/views/admin/contact.ejs
+++ b/views/admin/contact.ejs
@@ -25,7 +25,7 @@
 							<ol class="breadcrumb mb-0 p-0">
 								<li class="breadcrumb-users"><a href="javascript:;"><i class="bx bx-home-alt"></i></a>
 								</li>
-								<li class="breadcrumb-users active" aria-current="page">Banners</li>
+								<li class="breadcrumb-users active" aria-current="page">Messages</li>
 							</ol>
 						</nav>
 					</div>
