--- a/views/admin/include/sidebar.ejs
+++ b/views/admin/include/sidebar.ejs
@@ -14,42 +14,36 @@
   <ul class="metismenu" id="menu">
     <li>
       <a href="javascript:;" class="has-arrow">
-        <div class="parent-icon">
-          <i class='bx bx-home-alt'></i>
-        </div>
+        <div class="parent-icon"><i class='bx bx-home-alt'></i></div>
         <div class="menu-title">Dashboard</div>
       </a>
       <ul>
-       <!--  <li>
-          <a href="/getUsers">
-            <i class='bx bx-user'></i>User Setting </a>
-        </li> -->
+       
         <li> <a href="/getUsers"><i class="bx bx-user"></i>Users</a>
         </li>
         <li> <a href="/add-role"><i class="bx bx-radio-circle"></i>Roles</a>
         </li>
+        <li><a href="orders"><i class='bx bx-cart'></i>Orders</a></a>
+        </li>
+        <li>
+          <a href="contacts"> <i class='bx bx-chat'></i>Messages</a>
+        </li>
         
       </ul>
          <li>
-          <a href="/add-cat">
-            <i class='bx bx-cog'></i>Category Setting</a>
+          <a href="/add-cat"><i class='bx bx-cog'></i>Category Setting</a>
         </li>
 		    <li>
-          <a href="/add-banner">
-            <i class='bx bx-cog'></i>Banner Setting</a>
+          <a href="/add-banner"> <i class='bx bx-cog'></i>Banner Setting</a>
         </li>
         <li>
-          <a href="/products">
-            <i class='bx bx-cog'></i>Products</a>
+          <a href="/products"><i class='bx bx-cog'></i>Products</a>
         </li>
-         <!-- <li>
-          <a href="/add-role">
-            <i class='bx bx-cog'></i>Role</a>
-        </li> -->
+        
 		    <li>
-          <a href="/add-countries">
-            <i class='bx bx-cog'></i>Countries</a>
+          <a href="/add-countries"><i class='bx bx-cog'></i>Countries</a>
         </li>
+        
         
       </ul>
     </li>
