--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -6,109 +6,144 @@
 
 
 <body>
-	<!--wrapper-->
-	<div class="wrapper">
-		<!--sidebar wrapper -->
-		<%- include('./include/sidebar.ejs'); -%>
-		<!--end sidebar wrapper -->
-		<!--start header -->
-		<%-include('./include/header.ejs')-%>
-		<!--end header -->
-		<!--start page wrapper -->
-		<div class="page-wrapper">
-			<div class="page-content">
-				<!--breadcrumb-->
-				<div class="page-breadcrumb d-none d-sm-flex align-userss-center mb-3">
-					<div class="breadcrumb-title pe-3">Home</div>
-					<div class="ps-3">
-						<nav aria-label="breadcrumb">
-							<ol class="breadcrumb mb-0 p-0">
-								<li class="breadcrumb-users"><a href="javascript:;"><i class="bx bx-home-alt"></i></a>
-								</li>
-								<li class="breadcrumb-users active" aria-current="page">Orders</li>
-							</ol>
-						</nav>
+  <!--wrapper-->
+  <div class="wrapper">
+    <!--sidebar wrapper -->
+    <%- include('./include/sidebar.ejs'); -%>
+    <!--end sidebar wrapper -->
+    <!--start header -->
+    <%-include('./include/header.ejs')-%>
+    <!--end header -->
+    <!--start page wrapper -->
+    <div class="page-wrapper">
+      <div class="page-content">
+		<div class="row">
+			<div class="modal fade" id="viewModal" tabindex="-1" aria-labelledby="viewModalLabel" aria-hidden="true" style="width:100%">
+				<div class="modal-dialog">
+				  <div class="modal-content">
+					<div class="modal-header">
+					  <h5 class="modal-title" id="viewModalLabel">User Details</h5>
+					  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 					</div>
-				</div>
-				<!--end breadcrumb-->
-				<div class="row">
-					<div class="col-xl-12 mx-auto">
-						<div class="card">
-							
-							   <div class="card-body p-12">
-								   <div class="row">
-									 <h3 class="mb-0 text-uppercase col-xl-9">Orders</h3>
-									 
-									 	<div class="d-md-flex d-grid align-items-center gap-3 float-right col-xl-3">
-									 			
-									   </div>
-												
-									</div>
-							   </div>
-					      		</br>
-								<div class="card">
-									<div class="card-body">
-										<div class="table-responsive">
-											<% if (success.length > 0 ) { %>
-												<div class="alert alert-success">
-												<%= success %>
-												</div>
-											<% } %>
-											<table id="example2" class="table table-striped table-bordered">
-												<thead>
-													<tr>
-														<th>S No#</th>
-														<th>Name</th>
-													    <th>Address</th>
-														<th>Payment Type</th>
-														<th>Status</th>
-													</tr>
-												</thead>
-												<tbody>
-													 <%	let i=1;
-				                                     if(orders !=""){
-				                                     if (orders && orders.length > 0) { 
-														orders.forEach((order) => { %>
-													<tr id='trid_<%= order._id%>'>
-														<td><%= i++ %></td>
-														<td><%= order.name %></td>
-														<td><%= order.address %></td>
-														<td><%= order.paymentMethod %></td>
+					<div class="modal-body">
+					  <ul class="list-group">
+						<li class="list-group-item"><strong>Full Name:</strong> <span id="view-name"></span></li>
+						<li class="list-group-item"><strong>Phone:</strong> <span id="view-phone"></span></li>
+						<li class="list-group-item"><strong>Email:</strong> <span id="view-email"></span></li>
+						<li class="list-group-item"><strong>Role:</strong> <span id="view-role"></span></li>
+						<li class="list-group-item"><strong>Address:</strong> <span id="view-address"></span></li>
+						<li class="list-group-item"><strong>Gender:</strong> <span id="view-gender"></span></li>
+						<li class="list-group-item"><strong>Facebook Url:</strong> <span id="view-facebook"></span></li>
+						<li class="list-group-item"><strong>Facebook Url:</strong> <span id="view-github"></span></li>
+						
+						<li class="list-group-item"><strong>Instagram:</strong> <span id="view-instagram"></span></li>
+						<li class="list-group-item"><strong>Mobile:</strong> <span id="view-mobile"></span></li>
+						<li class="list-group-item"><strong>Twitter:</strong> <span id="view-twitter"></span></li>
+						<li class="list-group-item"><strong>Website:</strong> <span id="view-website"></span></li>
+						
 
-														<td><a href=''><i class='bx bx-show'></i></a></td>
-													</tr>
-
-													<% });} }%>
-												</tbody>
-												
-											</table>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+					  </ul>
 					</div>
+					<div class="modal-footer">
+					  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+					</div>
+				  </div>
 				</div>
-				<!--end row-->
+			</div>
 
-
-
-		   </div>
 		</div>
-		<!--end page wrapper -->
-		<!--start overlay-->
-		<div class="overlay toggle-icon"></div>
-		<!--end overlay-->
-		<!--Start Back To Top Button--> <a href="javaScript:;" class="back-to-top"><i class='bx bxs-up-arrow-alt'></i></a>
-		<!--End Back To Top Button-->
-		<footer class="page-footer">
-			<p class="mb-0">Copyright © 2023. All right reserved.</p>
-		</footer>
-	</div>
-	<!--end wrapper-->
+        <!--breadcrumb-->
+        <div class="page-breadcrumb d-none d-sm-flex align-userss-center mb-3">
+          <div class="breadcrumb-title pe-3">Home</div>
+          <div class="ps-3">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb mb-0 p-0">
+                <li class="breadcrumb-users"><a href="javascript:;"><i class="bx bx-home-alt"></i></a>
+                </li>
+                <li class="breadcrumb-users active" aria-current="page">Orders</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+        <!--end breadcrumb-->
+        <div class="row">
+          <div class="col-xl-12 mx-auto">
+            <div class="card">
 
-	
+              <div class="card-body p-12">
+                <div class="row">
+                  <h3 class="mb-0 text-uppercase col-xl-9">Orders</h3>
+
+                  <div class="d-md-flex d-grid align-items-center gap-3 float-right col-xl-3">
+
+                  </div>
+
+                </div>
+              </div>
+              </br>
+              <div class="card">
+                <div class="card-body">
+                  <div class="table-responsive">
+                    <% if (success.length > 0 ) { %>
+                    <div class="alert alert-success">
+                      <%= success %>
+                    </div>
+                    <% } %>
+                    <table id="example2" class="table table-striped table-bordered">
+                      <thead>
+                        <tr>
+                          <th>S No#</th>
+                          <th>Name</th>
+                          <th>Address</th>
+                          <th>Payment Type</th>
+                          <th>Status</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <%	let i=1;
+				            if(orders !=""){
+				            if (orders && orders.length > 0) { 
+							orders.forEach((order) => { %>
+                        <tr id='trid_<%= order._id%>'>
+                          <td><%= i++ %></td>
+                          <td><%= order.name %></td>
+                          <td><%= order.address %></td>
+                          <td><%= order.paymentMethod %></td>
+
+                          <td><button data-id="<%= order._id %>" class="btn btn-primary" href="javascript:;" class="" data-bs-toggle="modal" data-bs-target="#viewModal" ><i class='bx bx-show'></i></a></td>
+                        </tr>
+
+                        <% });} }%>
+                      </tbody>
+
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--end row-->
 
 
 
-	<%-include('include/footer.ejs')-%>
+    </div>
+  </div>
+  <!--end page wrapper -->
+  <!--start overlay-->
+  <div class="overlay toggle-icon"></div>
+  <!--end overlay-->
+  <!--Start Back To Top Button--> <a href="javaScript:;" class="back-to-top"><i class='bx bxs-up-arrow-alt'></i></a>
+  <!--End Back To Top Button-->
+  <footer class="page-footer">
+    <p class="mb-0">Copyright © 2023. All right reserved.</p>
+  </footer>
+  </div>
+  <!--end wrapper-->
+
+
+
+
+
+  <%-include('include/footer.ejs')-%>
