--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -65,7 +65,7 @@
                     <h2 class="title mb-1">Got Any Questions?</h2><!-- End .title mb-2 -->
                     <p class="mb-2">Use the form below to get in touch with the sales team</p>
 
-                    <form action="#" class="contact-form mb-3">
+                    <form action="#" class="contact-form mb-3" id="contactForm">
                         <div class="row">
                             <div class="col-sm-6">
                                 <label for="cname" class="sr-only">Name</label>
