--- a/views/user/include/footer.ejs
+++ b/views/user/include/footer.ejs
@@ -398,7 +398,7 @@
                                 </div><!-- End .form-choice -->
                             </div><!-- .End .tab-pane -->
                             <div class="tab-pane fade" id="register" role="tabpanel" aria-labelledby="register-tab">
-                                <form action="#">
+                                <form action="#" id="singupForm">
                                     <div class="form-group">
                                         <label for="register-email">Your email address *</label>
                                         <input type="email" class="form-control" id="register-email" name="register-email" required>
@@ -408,6 +408,13 @@
                                         <label for="register-password">Password *</label>
                                         <input type="password" class="form-control" id="register-password" name="register-password" required>
                                     </div><!-- End .form-group -->
+
+                                    <div class="form-group">
+                                        <label for="register-password">Confirm Password</label>
+                                        <input type="password" class="form-control" id="register-password-confirm" name="register-password-confirm" required>
+                                    </div><!-- End .form-group -->
+
+
 
                                     <div class="form-footer">
                                         <button type="submit" class="btn btn-outline-primary-2">
