--- a/views/user/include/header.ejs
+++ b/views/user/include/header.ejs
@@ -1,3 +1,4 @@
+
 <body>
   <div class="page-wrapper">
     <header class="header header-14">
@@ -69,33 +70,30 @@
                   <div class="header-search header-search-extended header-search-visible header-search-no-radius">
                     <a href="#" class="search-toggle" role="button"><i class="icon-search"></i></a>
                     <form action="#" method="get">
-                      <div class="header-search-wrapper search-wrapper-wide">
-
-                        <div class="select-custom">
-                          <select id="cat" name="cat">
-                            <option value="">All Departments</option>
-                            <option value="1">Fashion</option>
-                            <option value="2">- Women</option>
-                            <option value="3">- Men</option>
-                            <option value="4">- Jewellery</option>
-                            <option value="5">- Kids Fashion</option>
-                            <option value="6">Electronics</option>
-                            <option value="7">- Smart TVs</option>
-                            <option value="8">- Cameras</option>
-                            <option value="9">- Games</option>
-                            <option value="10">Home &amp; Garden</option>
-                            <option value="11">Motors</option>
-                            <option value="12">- Cars and Trucks</option>
-                            <option value="15">- Boats</option>
-                            <option value="16">- Auto Tools &amp; Supplies</option>
-                          </select>
-                        </div><!-- End .select-custom -->
+                      <div class="header-search-wrapper search-wrapper-wide" style="position: relative;">
+                    
                         <label for="q" class="sr-only">Search</label>
-                        <input type="search" class="form-control" name="q" id="q" placeholder="Search product ..." required>
-
-                        <button class="btn btn-primary" type="submit"><i class="icon-search"></i></button>
-                      </div><!-- End .header-search-wrapper -->
+                    
+                        <input
+                          type="search"
+                          class="form-control"
+                          name="q"
+                          id="search"
+                          placeholder="Search product ..."
+                          autocomplete="off"
+                          required
+                        >
+                    
+                        <button class="btn btn-primary" type="submit">
+                          <i class="icon-search"></i>
+                        </button>
+                    
+                        <!-- 🔥 MOVE RESULTS HERE -->
+                        <ul id="results" class="search-results"></ul>
+                    
+                      </div>
                     </form>
+                    
                   </div><!-- End .header-search -->
                 </div><!-- End .col-xxl-4-5col -->
 
